Fix v17 API compatibility in performance optimisations (getX/getY, no getFirst/getLast)